# ros2_jetsonnano_od

./: README.md  grab_withrealsense-leaf 20250305.ipynb  setup.bash  test_arm.py
backup_0325/src/ros2_vision_arm_control/: CMakeLists.txt  arm_control.py  package.xml  setup.py
backup_0325/src/ros2_vision_arm_control/utils/: __init__.py  datasets.py  plot.py
cv_bridge_ws/install/: local_setup.sh  setup.sh
cv_bridge_ws/log/: latest_build  latest_test
dofbot_ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dofbot_ros2_ws/log/: latest_build
dofbot_ros2_ws/src/ros2_vision_arm_control/: CMakeLists.txt  README.md  arm_control.py  camera_node.py  motion_planner.py  setup.py  test_arm.py  test_camera_node.py  yolo_detector.py
dofbot_ros2_ws/src/ros2_vision_arm_control/urdf/: dofbot.urdf
dofbot_ros2_ws/src/ros2_vision_arm_control/utils/: __init__.py  general.py  ikpy_utils.py  torch_utils.py
dofbot_ros2_ws/src/ros2_vision_arm_control/yolo_weight/: yolov5t_0401.pt
legacy_code/: .detect.py.swp  12031.pt  4.read_servo.ipynb  Untitled.ipynb  arm.URDF  arm_real copy.URDF  detect.py  grab_leaf20250303.py  grab_withrealsense 20250115.ipynb  grab_withrealsense 20250123.ipynb  grab_withrealsense 20250220.ipynb  grab_withrealsense copy.ipynb  grab_withrealsense-leaf 20250221.ipynb  grab_withrealsense-leaf 20250303.ipynb  grab_withrealsense-leaf 20250305.ipynb  server.py  servercopy.py  test.py  train.py  yolotrain.ipynb
legacy_code/.ipynb_checkpoints/: 4.read_servo-checkpoint.ipynb  (+2 more)
ros2_vision_arm_control/: package.xml
(+469 files in other folders)
